# Domain_Analayzer

./: .env.example  .gitignore  DEPLOYMENT_MACOS_GITHUB.md  README.md  app.py  cli.py  config.yaml  domain.txt  local_rules.yaml  pyproject.toml  requirements.txt
.pytest_cache/v/cache/: nodeids
data/: domain_intel.db
docs/: Comprehensive_Guide.md
scripts/: cleanup_repo.ps1  deploy.ps1
src/: __init__.py  scanner.py  server.py
src/core/: __init__.py  config.py  database.py  domain.py  errors.py  logger.py  notifications.py  rate_limiter.py  security.py  validation.py
src/modules/: __init__.py  base.py  content_scanner.py  ct_enumeration.py  dns_enumeration.py  redirect_analysis.py  ssllabs.py  takeover_detection.py  tls_inspection.py  whois_lookup.py
src/modules/threat_intel/: __init__.py  abuseipdb.py  alienvault_otx.py  base.py  criminalip.py  local_reputation.py  urlscan.py  virustotal.py
src/reporters/: __init__.py  base.py  csv_reporter.py  html_reporter.py  json_reporter.py
src/webui/: app.py
tests/: __init__.py  test_config.py  test_content_scanner.py  test_domain.py  test_rate_limiter.py  test_reporters.py  test_security.py
